{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 62,
  "lineage": "23dfbc0a-09a4-27b6-1763-28002308da64",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "atividade2netinter",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "uxjdnc5x1qpejlao2kxv1wfqpg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/example-subnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-59-A3-14",
            "name": "example-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "atividade2",
            "virtual_machine_id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Compute/virtualMachines/atividade2-vm"
          },
          "dependencies": [
            "azurerm_resource_group.atividade2firmino",
            "azurerm_subnet.atividade2subnetwork",
            "azurerm_virtual_network.atividade2network",
            "azurerm_public_ip.atividade2publicip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkInterfaces/example-nic|/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "network_interface_id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkInterfaces/example-nic",
            "network_security_group_id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
          },
          "dependencies": [
            "azurerm_network_interface.atividade2netinter",
            "azurerm_network_security_group.atividade2security",
            "azurerm_public_ip.atividade2publicip",
            "azurerm_resource_group.atividade2firmino",
            "azurerm_subnet.atividade2subnetwork",
            "azurerm_virtual_network.atividade2network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "atividade2security",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "westus",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "atividade2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.atividade2firmino"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "atividade2security",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/mysql",
            "name": "mysql",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 101,
            "protocol": "TCP",
            "resource_group_name": "atividade2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.atividade2security",
            "azurerm_resource_group.atividade2firmino"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "atividade2publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.135.44.156",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "atividade2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "dependencies": [
            "azurerm_resource_group.atividade2firmino"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "atividade2subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/example-subnet",
            "name": "example-subnet",
            "resource_group_name": "atividade2",
            "virtual_network_name": "virtualNetwork1"
          },
          "dependencies": [
            "azurerm_resource_group.atividade2firmino",
            "azurerm_virtual_network.atividade2network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "atividade2network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "10.0.0.4",
              "10.0.0.5"
            ],
            "guid": "8b36d2a5-dcf7-441e-ac0e-e2af5dd8b07e",
            "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1",
            "location": "westus",
            "name": "virtualNetwork1",
            "resource_group_name": "atividade2",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/70aa581f-0e3e-4fe0-b4b1-645702124db2/resourceGroups/atividade2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/example-subnet",
                "name": "example-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.atividade2firmino"
          ]
        }
      ]
    }
  ]
}